--- a/ml_final_project.Rmd
+++ b/ml_final_project.Rmd
@@ -47,10 +47,6 @@ test_df <- test_df[, -nas]
 test_df <- test_df[, -nzv]
 ```
 
-## How the Model Was Built
-
-## Cross Validation 
-
 ```{r split training df}
 set.seed(1)
 in_training <- createDataPartition(train_df$classe, p = .70, list = F)
@@ -58,30 +54,46 @@ training <- train_df[in_training, ]
 testing <- train_df[-in_training, ]
 ```
 
-## Gradient Boosted Model
+## Exploration 
 
 ```{r}
-fit_gbm <- train(classe ~ ., 
-                   method = "gbm",
-                   verbose = F,
-                   data = training) 
+ggplot(data = training, aes(x = classe)) + 
+  geom_histogram(stat = "count")
 ```
 
 ```{r}
-fit_gbm$finalModel
+ggplot(data = training, aes(x = total_accel_belt, y = total_accel_arm, color = classe)) + 
+  geom_point(alpha = .5, size = 2)
 ```
 
-How does this model fit perform on the testing dataset? 
+## How the Model Was Built
 
-```{r}
-confusionMatrix(predict(fit_gbm, testing), testing$classe)
-```
+## Cross Validation 
 
-Create a vector of predicted values using this model and the testing dataframe as it's input. 
+<!-- ## Gradient Boosted Model -->
 
-```{r}
-data.frame(number = c(1:20), pred = predict(fit_gbm, test_df))
-```
+<!-- ```{r} -->
+<!-- fit_gbm <- train(classe ~ .,  -->
+<!--                    method = "gbm", -->
+<!--                    verbose = F, -->
+<!--                    data = training)  -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- fit_gbm$finalModel -->
+<!-- ``` -->
+
+<!-- How does this model fit perform on the testing dataset?  -->
+
+<!-- ```{r} -->
+<!-- confusionMatrix(predict(fit_gbm, testing), testing$classe) -->
+<!-- ``` -->
+
+<!-- Create a vector of predicted values using this model and the testing dataframe as it's input.  -->
+
+<!-- ```{r} -->
+<!-- data.frame(number = c(1:20), pred = predict(fit_gbm, test_df)) -->
+<!-- ``` -->
 
 ## Random Forest Model
 
