--- a/ml_final_project.Rmd
+++ b/ml_final_project.Rmd
@@ -47,11 +47,18 @@ test_df <- test_df[, -nas]
 test_df <- test_df[, -nzv]
 ```
 
+We'll use the `train_df` dataset to build training, testing, and validation datasets. 
+
 ```{r split training df}
 set.seed(1)
-in_training <- createDataPartition(train_df$classe, p = .70, list = F)
-training <- train_df[in_training, ]
-testing <- train_df[-in_training, ]
+
+build <- createDataPartition(train_df$classe, p = .70, list = F)
+validation <- train_df[-build, ]
+build_data <- train_df[build, ]
+
+in_training <- createDataPartition(build_data$classe, p = .70, list = F)
+training <- build_data[in_training, ]
+testing <- build_data[-in_training, ]
 ```
 
 ## Exploration 
@@ -69,31 +76,6 @@ ggplot(data = training, aes(x = total_accel_belt, y = total_accel_arm, color = c
 ## How the Model Was Built
 
 ## Cross Validation 
-
-<!-- ## Gradient Boosted Model -->
-
-<!-- ```{r} -->
-<!-- fit_gbm <- train(classe ~ .,  -->
-<!--                    method = "gbm", -->
-<!--                    verbose = F, -->
-<!--                    data = training)  -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- fit_gbm$finalModel -->
-<!-- ``` -->
-
-<!-- How does this model fit perform on the testing dataset?  -->
-
-<!-- ```{r} -->
-<!-- confusionMatrix(predict(fit_gbm, testing), testing$classe) -->
-<!-- ``` -->
-
-<!-- Create a vector of predicted values using this model and the testing dataframe as it's input.  -->
-
-<!-- ```{r} -->
-<!-- data.frame(number = c(1:20), pred = predict(fit_gbm, test_df)) -->
-<!-- ``` -->
 
 ## Random Forest Model
 
